@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.7: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2011-05-03" />
+<meta name="date" content="$Date$" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2011-05-03</td></tr>
+<td>$Date$</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.21</td></tr>
 </tbody>
@@ -3243,13 +3243,10 @@ gtk-print-preview-command = &quot;epdfview %f&quot;
 </pre>
 <p>at the end of the file. Of course, you can also use xpdf, kpdf or whatever
 as the print preview command.</p>
-<p>Unfortunately, native GTK printing support is only available if Geany was
-built against GTK 2.10 (or above) <strong>and</strong> is running with GTK 2.10 (or above).
-If not, Geany provides basic printing support. This means you can print a
-file by passing the filename of the current file to a command which
-actually prints the file. However, the printed document contains no syntax
-highlighting. You can adjust the command to which the filename is
-passed in the preferences dialog. The default command is:</p>
+<p>Geany also provides an alternative basic printing support using a custom
+print command. However, the printed document contains no syntax highlighting.
+You can adjust the command to which the filename is passed in the preferences
+dialog. The default command is:</p>
 <pre class="literal-block">
 % lpr %f
 </pre>
@@ -6580,7 +6577,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2011-05-22 10:30 UTC.
+Generated on: 2011-06-13 20:12 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
