@@ -272,11 +272,6 @@ static void main_init(void)
 	gtk_widget_set_name(ui_lookup_widget(main_widgets.window, "menubar1"), "GeanyMenubar");
 	gtk_widget_set_name(main_widgets.toolbar, "GeanyToolbar");
 
-#if ! GTK_CHECK_VERSION(2, 10, 0)
-	/* hide Page setup menu item, it isn't supported with non-GTK printing */
-	gtk_widget_hide(ui_widgets.print_page_setup);
-#endif
-
 	/* for some reason we need to set the initial size request,
 	 * otherwise the main window gets crazy dimensions */
 	gtk_widget_set_size_request(main_widgets.window, 10, 10);
